--- a/fibonacci.css
+++ b/fibonacci.css
@@ -20,3 +20,25 @@ form div {
 form input {
     margin: 0 1vw;
 }
+.red{
+border: 1px solid red;
+color: red;
+height:6.5vh;
+border-radius: 4px;
+}
+.error{
+background-color: rgb(233, 199, 199);
+color: #A94442;
+margin-left: 12vw;
+margin-top: 1vh;
+font-size: 16px;
+border-radius: 4px;
+padding: 1vh 0;
+}
+.dNone{
+    display: none;
+}
+#serverError {
+    color: red;
+    font-size: 16px;
+}
