--- a/fibonacci.css
+++ b/fibonacci.css
@@ -8,11 +8,11 @@ form {
     margin-left: 7vw;
     margin-top: 10vh;
 }
-#displayF {
+/* #displayF {
     margin-left: 1vw;
     font-weight: bold;
     text-decoration: underline;
-}
+} */
 form div {
     display: flex;
     align-items:center
@@ -29,16 +29,16 @@ border-radius: 4px;
 .error{
 background-color: rgb(233, 199, 199);
 color: #A94442;
-margin-left: 12vw;
+margin-left: 14vw;
 margin-top: 1vh;
 font-size: 16px;
 border-radius: 4px;
 padding: 1vh 0;
 }
-.dNone{
-    display: none;
-}
 #serverError {
     color: red;
     font-size: 16px;
 }
+input[type=number] {
+    -moz-appearance: textfield;
+  }
