--- a/fibonacci.css
+++ b/fibonacci.css
@@ -8,11 +8,6 @@ form {
     margin-left: 7vw;
     margin-top: 10vh;
 }
-/* #displayF {
-    margin-left: 1vw;
-    font-weight: bold;
-    text-decoration: underline;
-} */
 form div {
     display: flex;
     align-items:center
@@ -29,8 +24,8 @@ border-radius: 4px;
 .error{
 background-color: rgb(233, 199, 199);
 color: #A94442;
-margin-left: 14vw;
-margin-top: 1vh;
+margin-left: 3.5vw;
+/* margin-top: 1vh; */
 font-size: 16px;
 border-radius: 4px;
 padding: 1vh 0;
